fixed spacing for mobile

--- a/src/components/compents.css
+++ b/src/components/compents.css
@@ -77,6 +77,14 @@ select {
 
 /* ******************** */
 
+/*  */
+/* IMPORTED FONTS */
+
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap");
+/*  */
+* {
+  font-family: "Roboto", Courier, monospace;
+}
 .announcement {
   background-color: steelblue;
   font-size: 18px;
@@ -147,6 +155,7 @@ a {
 
 #star {
   margin-inline: 10px;
+  float: right;
 }
 
 /* ******************** */
@@ -159,7 +168,9 @@ a {
   display: flow-root;
   text-align: -webkit-right;
 }
-
+.productScreenBG {
+  background: linear-gradient(#e66465, #9198e5);
+}
 .productScreen {
   /* Both of these caused the mobile screen to go over */
   /* height: 100vh; */
@@ -185,15 +196,17 @@ a {
 
 .productScreenbuttons {
   /* display: flex; */
+  float: right;
 }
 /* Main image on screen */
 .productScreenSmallImagesNested {
   /* border: black 5px solid; */
+  /* border: black 5px solid; */
   margin-left: 10px;
-  width: 100px;
-  height: 100px;
-  max-width: 100px;
-  min-width: 100px;
+  /* width: 100px; */
+  /* height: 100px; */
+  max-width: 75px;
+  min-width: 75px;
   transition: 0.32s;
   cursor: pointer;
 }
@@ -202,6 +215,11 @@ a {
 }
 .productScreenSmallImages {
   display: inline-flex;
+  justify-content: space-evenly;
+  align-content: center;
+  flex-wrap: wrap;
+  flex-direction: row;
+  align-items: center;
 }
 
 img {
@@ -297,7 +315,33 @@ img {
 /* ******************** */
 
 /* Footer */
+#footerText {
+  text-align: -webkit-center;
+  font-size: calc(10px + 1vw);
+}
 .footer {
+  font-size: 30px;
   /* position: absolute;
   bottom: 0; */
+}
+.footerInput {
+  height: 30px;
+  width: 100%;
+  border-radius: 5px;
+}
+.footerInput,
+#footerText {
+  display: flex;
+  margin: 15px 0px;
+  width: calc(250px + 3vw);
+  margin-bottom: calc(5px + 2vh);
+  flex-flow: column;
+  flex-direction: column;
+  align-items: center;
+  text-align-last: center;
+}
+
+#centerText {
+  text-align: -webkit-center;
+  justify-content: center;
 }
